# kamerplanter

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  Taskfile.yaml  custom_components  debug_form_submit.py  docker-compose.e2e.yml  docker-compose.release.yml  docker-compose.yml  hacs.json  index.html  info.md  kind-config.yaml  mkdocs.yml  renovate.json5  requirements-dev.txt  sitemap.xml  skaffold.yaml
src/backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/app/: main.py
src/backend/app/api/v1/: router.py
src/backend/app/common/: auth.py  dependencies.py  enums.py  error_handlers.py  error_schemas.py  exceptions.py  middleware.py  pagination.py  tenant_guard.py  types.py
src/backend/app/config/: constants.py  logging.py  settings.py
src/backend/app/data_access/arango/: activity_repository.py  api_key_repository.py  auth_provider_repository.py  base_repository.py  botanical_family_repository.py  calendar_feed_repository.py  care_reminder_repository.py  collections.py  connection.py  enrichment_repository.py  feeding_repository.py  fertilizer_repository.py  graph_repository.py  harvest_repository.py  import_job_repository.py  invitation_repository.py  ipm_repository.py  lifecycle_repository.py  location_assignment_repository.py  location_type_repository.py  membership_repository.py  notification_preference_repository.py  notification_repository.py  nutrient_plan_repository.py  oidc_config_repository.py  phase_sequence_repository.py  (+16 more)
src/backend/app/migrations/: add_platform_admin.py  arango_setup.py  backfill_tenant_key.py  migrate_lifecycle_to_phase_sequence.py  seed_activities.py  seed_adventskalender.py  seed_auth.py  seed_data.py  seed_fertilizers.py  seed_gardol.py  seed_lifecycles_outdoor.py  seed_light_mode.py  seed_location_types.py  seed_nutrient_plans_outdoor.py  seed_nutrient_plans_ro.py  seed_phase_sequences.py  seed_plagron.py  seed_plant_info.py  seed_plant_info_extended.py  seed_starter_kits.py  seed_upsert_helpers.py  yaml_loader.py
src/backend/app/tasks/: __init__.py  auth_tasks.py  care_tasks.py  dormancy_checks.py  enrichment_tasks.py  notification_tasks.py  phase_transitions.py  sensor_ingestion_tasks.py  tank_maintenance_tasks.py  tenant_tasks.py  vector_indexing_tasks.py  vernalization_updates.py  watering_tasks.py
src/backend/tests/: conftest.py  test_care_reminder_engine.py  test_csrf.py  test_delivery_channel_engine.py  test_delivery_channel_models.py  test_encryption_engine.py  test_ip_anonymization.py  test_oauth_engine.py  test_onboarding_engine.py  test_seed_light_mode.py  test_substrate_lifecycle_manager.py
src/backend/tests/api/: test_calculations.py  test_enrichment.py  test_error_handling.py
src/backend/tests/integration/: test_arango_integration.py
src/backend/tests/unit/: test_request_id_middleware.py
src/knowledge-service/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
src/knowledge-service/app/: config.py  embedding.py  ingestor.py  main.py  prompt_engine.py  reranker.py  schemas.py  service.py
src/knowledge-service/app/llm/: __init__.py  anthropic.py  interface.py  ollama.py  openai_compatible.py
src/knowledge-service/app/vectordb/: connection.py  repository.py  schema.py
src/knowledge-service/tests/: conftest.py  test_prompt_engine.py  test_reranker.py
(+2281 files in other folders)
