[project]
name = "kamerplanter-backend"
version = "1.0.0"
description = "Kamerplanter agricultural management system backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-arango>=8.1.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "markdownify>=0.14.0",
    "astral>=3.2",
    "authlib>=1.3.0",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "psycopg[binary,pool]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ["py314"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
